--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/static/style.css"/>
+  <link rel="stylesheet" href="../static/style.css"/>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="70px">
 
@@ -51,7 +51,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center" id="quem">
   <h3 class="margin">Quem Sou?</h3>
-  <img src="static/profile.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <img src="../static/profile.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
   <h3>Sou programador</h3>
 </div>
 
@@ -79,25 +79,25 @@
   <p>Meus conhecimentos incluem, porem não se resumem somente á:</p>
 
   <div class="col-sm-1">
-    <img src="static/GitHub-Mark-120px-plus.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+    <img src="../static/GitHub-Mark-120px-plus.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
   </div>
   <div class="col-sm-1">
-    <img src="static/Git-Icon-Black.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+    <img src="../static/Git-Icon-Black.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
   </div>
   <div class="col-sm-1">
-    <img src="static/python.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+    <img src="../static/python.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
   </div>
   <div class="col-sm-1">
-    <img src="static/icons8-java-100.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+    <img src="../static/icons8-java-100.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
   </div>
   <div class="col-sm-1">
-    <img src="static/icons8-css-100.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+    <img src="../static/icons8-css-100.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
   </div>
   <div class="col-sm-1">
-    <img src="static/icons8-html-100.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+    <img src="../static/icons8-html-100.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
   </div>
   <div class="col-sm-1">
-    <img src="static/jasper.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+    <img src="../static/jasper.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
   </div>
 </div>
 
@@ -107,7 +107,7 @@
   <p>Meus projetos:</p>
   <div class="col-sm-1">
     <a href="https://github.com/Bruno-Bernardo?tab=repositories" target="_blank">
-	  <img src="static/GitHub-Mark-light-120px-plus.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+	  <img src="../static/GitHub-Mark-light-120px-plus.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
 	</a>
   </div>
 </div>
@@ -119,37 +119,37 @@
 	<div class="col-sm-2">
       <a href="mailto:bb.bruno.bernardo@gmail.com?subject=Ol%C3%A1%2C%20vi%20seu%20curriculo%20online." target="_blank">
 		<p>Email</p>
-		<img src="static/email.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+		<img src="../static/email.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
 	  </a>
     </div>
 	<div class="col-sm-2">
       <a href="https://github.com/Bruno-Bernardo" target="_blank">
 		<p>GitHub</p>
-		<img src="static/GitHub-Mark-120px-plus.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+		<img src="../static/GitHub-Mark-120px-plus.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
 	  </a>
     </div>
     <div class="col-sm-2">
       <a href="https://www.facebook.com/bruno.bernardo.904" target="_blank">
 		<p>Facebook</p>
-	    <img src="static/flogo-RGB-HEX-Blk-114.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+	    <img src="../static/flogo-RGB-HEX-Blk-114.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
 	  </a>
     </div>
     <div class="col-sm-2"> 
       <a href="https://www.linkedin.com/in/bruno-bernardo-15b071160/" target="_blank">
 		<p>LinkedIn</p>
-	    <img src="static/In-Black-101px-R.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+	    <img src="../static/In-Black-101px-R.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
 	  </a>
 	</div>
     <div class="col-sm-2"> 
       <a href="https://api.whatsapp.com/send?phone=5548998636693&text=Ol%C3%A1%2C%20vi%20seu%20curriculo%20online." target="_blank">
 	    <p>Whatsapp</p>
-        <img src="static/whatsapp.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+        <img src="../static/whatsapp.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
 	  </a>
     </div>
 	<div class="col-sm-2"> 
       <a href="https://api.whatsapp.com/send?phone=5548998636693&text=Ol%C3%A1%2C%20vi%20seu%20curriculo%20online." target="_blank">
 	    <p>Whatsapp</p>
-        <img src="static/whatsapp.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
+        <img src="../static/whatsapp.png" class="img-responsive margin" alt="Image" style="display:inline" width="100" height="100">
 	  </a>
     </div>
   </div>
